<resources>
    <string name="app_name">Personal Organiser</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="Cal">Calender</string>

    <string name="title_activity_event">Event</string>

    <string name="friends">Friends</string>

    <string name="event">New Button</string>

    <string name="other">New Button</string>

    <string name="title_activity_friends">Friends</string>

    <string name="title_activity_gallery">Gallery</string>

    <string name="addF">Add Friend</string>

    <string name="editF">Edit Friend</string>

    <string name="title_activity_freinds">friends</string>

    <string name="min">min</string>

    <string name="title">Details</string>

    <string name="firstName">Enter First Name: </string>

    <string name="lastName">Enter Last Name: </string>

    <string name="phone">Enter Phone Number: </string>

    <string name="address">Enter Last Name: </string>

    <string name="add">Add</string>

    <string name="delete">Delete</string>

    <string name="modify">Modify</string>

    <string name="view">View</string>

    <string name="view_all">View All</string>

    <string name="show_info">Show Information</string>
</resources>
